--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "cSpell.words": [
+        "RAWR",
+        "REDISCLOUD",
+        "csrf",
+        "domos",
+        "ebadcsrftoken",
+        "favicon",
+        "googleapis",
         "resave",
         "signup"
     ]
