--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
         "RAWR",
         "REDISCLOUD",
         "csrf",
-        "domos",
+        "Scenes",
         "ebadcsrftoken",
         "favicon",
         "googleapis",
